--- a/package.json
+++ b/package.json
@@ -4,10 +4,14 @@
   "description": "Double Pendulum Simulation",
   "dependencies": {
     "dat.gui": "0.7.3",
-    "lodash": "^4.17.11"
+    "lodash": "4.17.11"
   },
   "devDependencies": {
-    "css-loader": "^1.0.0",
+    "@babel/core": "7.1.2",
+    "@babel/plugin-proposal-class-properties": "7.1.0",
+    "@babel/preset-env": "7.1.0",
+    "babel-loader": "8.0.4",
+    "css-loader": "1.0.0",
     "style-loader": "0.23.1",
     "webpack": "4.22.0",
     "webpack-cli": "3.1.2",
@@ -15,8 +19,8 @@
   },
   "scripts": {
     "test": "test",
-    "build": "npx webpack",
-    "start": "npx webpack-dev-server --open"
+    "build": "npx webpack -p --env.production",
+    "start": "npx webpack-dev-server --open --env"
   },
   "repository": {
     "type": "git",
